--- a/templates/open_detail.html
+++ b/templates/open_detail.html
@@ -119,7 +119,7 @@
   </div>
   
   {% if receta.imagen %}
-    <img src="{{ receta.imagen.url }}" alt="{{ receta.titulo }}" class="recipe-detail-image">
+    <img src="{{ receta.imagen }}" alt="{{ receta.titulo }}" class="recipe-detail-image">
   {% else %}
     <div class="recipe-detail-image-placeholder">
       🍳
